Rework the site around production evaluation, and unify onboarding on the quickstart (#499)
* fix: repair the license link on every documentation version

The Apache 2.0 link in the documentation index resolved to a GitHub
"File not found" page. Two things were wrong with it: the file is
LICENSE.txt, not LICENSE, and the released snapshots still carried the
former storm-repo owner, which now only survives as a redirect.

The released snapshots are otherwise frozen, so this is a URL-only
change: one line per file, no content touched. It has to reach them
because /docs/ serves the latest snapshot, which is where the broken
link was actually visible.

* feat(website): add local docs search, and a link checker for the built site

Search is built from the docs at build time and shipped as a static
index, so it works offline and sends nothing to a third party. Only the
current and released docs are indexed; the older snapshots are
near-identical copies that would multiply every hit.

The link checker walks the emitted HTML rather than the route table.
Docusaurus already fails the build on a broken Markdown link, but that
check only sees links it routed itself, and the landing page, quickstart,
comparison, benchmarks, tutorials and blog are all rendered from raw HTML
strings. It found two real breaks, fixed here:

- Every "Edit this page" link on the released docs pointed at
  docs/versioned_docs/version-X/<file>, a path that is not in the
  repository at all, so GitHub offered to create a new file. The string
  editUrl appends to the docs plugin's path; a function form maps each
  version to its real source instead.
- The "GitHub" navigation target went to the organization's repository
  list rather than this repository.

npm run check-links validates internal targets and fragments;
check-links:external also probes external URLs.

* feat(website): rework the landing page around production evaluation

The page carried four independent automatic animations above the fold: a